--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -18,7 +18,7 @@ target_link_libraries(portageapp portage ${EXTRA_LIBS})
 # MPI additions - need to push this down into cinch
 target_link_libraries(portageapp ${MPI_CXX_LIBRARIES})
 set_target_properties(portageapp PROPERTIES
-                      LINK_FLAGS ${MPI_CXX_LINK_FLAGS})
+                      LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
 
 # Jali additions
 include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
