--- a/src/state/test/CMakeLists.txt
+++ b/src/state/test/CMakeLists.txt
@@ -3,15 +3,16 @@
 # All rights reserved.
 #-----------------------------------------------------------------------------~#
 
-# Add test
-if (ENABLE_UNIT_TESTS)
-  cinch_add_unit(test_state_vector test_state_vector.cc)
+###### COMMENT OUT TESTS UNTIL CINCH CAN RUN USING MPIRUN/APRUN COMMANDS
 
-  message(STATUS "Jali_LIBRARIES ${Jali_LIBRARIES}")
-  message(STATUS "Jali_TPL_LIBRARIES ${Jali_TPL_LIBRARIES}")
-  
-  target_link_libraries(test_state_vector ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
-endif()
+# Add test
+#if (ENABLE_UNIT_TESTS)
+#  cinch_add_unit(test_state_vector test_state_vector.cc)
+#  target_link_libraries(test_state_vector ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
+#
+#  cinch_add_unit(test_state test_state.cc)
+#  target_link_libraries(test_state ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
+#endif()
 
 #----------------------------------------------------------------------------~-#
 # Formatting options for emacs and vim.
