Updated to latest Cinch build system.
- Had to change includes to use relative paths
- Updated unit tests with new interface
- Updated make lists with new test interface

--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -17,7 +17,10 @@ set(search_SOURCES
 
 # Add unit test
 if(ENABLE_UNIT_TESTS)
-  cinch_add_unit(search search_test.cc)
+  cinch_add_unit(search
+    SOURCES search_test.cc
+    POLICY MPI
+    THREADS 2)
 endif(ENABLE_UNIT_TESTS)
 
 #----------------------------------------------------------------------------~-#
