added unit test test/test_state_vector.cc

--- a/src/state/CMakeLists.txt
+++ b/src/state/CMakeLists.txt
@@ -22,6 +22,12 @@ if(ENABLE_UNIT_TESTS)
         LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
         POLICY MPI
         THREADS 2)
+
+    cinch_add_unit(test_state
+        SOURCES test/test_state.cc
+        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+        POLICY MPI
+        THREADS 2)
 endif(ENABLE_UNIT_TESTS)
 
 
