added remap_1st_order files and test for remapping a constant function

--- a/src/remap/CMakeLists.txt
+++ b/src/remap/CMakeLists.txt
@@ -6,14 +6,28 @@
 # Add header files
 set(remap_HEADERS
     remap.h
+    remap_1st_order.h
     PARENT_SCOPE
 )
 
 # Add source files
 set(remap_SOURCES
     remap.cc
+    remap_1st_order.cc
     PARENT_SCOPE
 )
+
+# Unit tests
+
+if (ENABLE_UNIT_TESTS) 
+
+  cinch_add_unit(test_remap_1st_order_constant
+    SOURCES  test/test_remap_1st_order_constant.cc
+    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
+    THREADS 1)
+
+endif(ENABLE_UNIT_TESTS)
 
 #----------------------------------------------------------------------------~-#
 # Formatting options for emacs and vim.
