Add first cut at simple search structure

--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -6,12 +6,14 @@
 # Add header files
 set(search_HEADERS
     search.h
+    search_simple.h
     PARENT_SCOPE
 )
 
 # Add source files
 set(search_SOURCES
     search.cc
+    search_simple.cc
     PARENT_SCOPE
 )
 
@@ -20,7 +22,12 @@ if(ENABLE_UNIT_TESTS)
   cinch_add_unit(search
     SOURCES search_test.cc
     POLICY MPI
-    THREADS 2)
+    THREADS 1)
+  cinch_add_unit(search_simple_test
+    SOURCES search_simple_test.cc
+    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
+    THREADS 1)
 endif(ENABLE_UNIT_TESTS)
 
 #----------------------------------------------------------------------------~-#
