remap_1st_order.cc has been removed

--- a/src/remap/CMakeLists.txt
+++ b/src/remap/CMakeLists.txt
@@ -10,10 +10,10 @@ set(remap_HEADERS
 )
 
 # Add source files
-set(remap_SOURCES
-    remap_1st_order.cc
-    PARENT_SCOPE
-)
+#set(remap_SOURCES
+#    remap_1st_order.cc
+#    PARENT_SCOPE
+#)
 
 # Unit tests
 
