--- a/src/wrappers/CMakeLists.txt
+++ b/src/wrappers/CMakeLists.txt
@@ -15,6 +15,12 @@ set(wrappers_SOURCES
     PARENT_SCOPE)
 
 if (ENABLE_UNIT_TESTS)
+  cinch_add_unit(test_jali_mesh_wrapper
+                 SOURCES mesh/jali/test/test_jali_mesh_wrapper.cc
+                 LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+                 POLICY MPI
+                 THREADS 1)
+
   cinch_add_unit(test_jali_state_vector
                  SOURCES state/jali/test/test_jali_state_vector.cc
                  LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
