Refactored intersect to be templated on MeshWrapper instead of Cell

--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -20,6 +20,8 @@ set(intersect_SOURCES
 if(ENABLE_UNIT_TESTS)
   cinch_add_unit(intersectClipper
     SOURCES intersectClipperTest.cc clipper.cpp
+    LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
     )
 endif(ENABLE_UNIT_TESTS)
 
