Syncing with upstream

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -8,21 +8,27 @@
 #------------------------------------------------------------------------------#
 
 add_executable(portageapp main.cc)
+add_executable(node2dapp node-2d.cc)
 
 #------------------------------------------------------------------------------#
 # Add include and link dependencies
 #------------------------------------------------------------------------------#
 
 target_link_libraries(portageapp portage ${EXTRA_LIBS})
+target_link_libraries(node2dapp portage ${EXTRA_LIBS})
 
 # MPI additions - need to push this down into cinch
 target_link_libraries(portageapp ${MPI_CXX_LIBRARIES})
 set_target_properties(portageapp PROPERTIES
                       LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
+target_link_libraries(node2dapp ${MPI_CXX_LIBRARIES})
+set_target_properties(node2dapp PROPERTIES
+                      LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
 
 # Jali additions
 include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
 target_link_libraries(portageapp ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
+target_link_libraries(node2dapp ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
 
 #~---------------------------------------------------------------------------~-#
 # Formatting options for emacs and vim.
