Add search_kdtree and modify driver to use it

--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -6,6 +6,11 @@
 # Add header files
 set(search_HEADERS
     search_simple.h
+    search_kdtree.h
+    kdtree.h
+    BoundBox.h
+    Point.h
+    Vector.h
     PARENT_SCOPE
 )
 
@@ -19,6 +24,11 @@ set(search_HEADERS
 if(ENABLE_UNIT_TESTS)
   cinch_add_unit(search_simple_test
     SOURCES search_simple_test.cc
+    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
+    THREADS 1)
+  cinch_add_unit(search_kdtree_test
+    SOURCES search_kdtree_test.cc
     LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     THREADS 1)
