--- a/src/support/CMakeLists.txt
+++ b/src/support/CMakeLists.txt
@@ -6,6 +6,7 @@
 # Add header files
 set(support_HEADERS
     portage.h
+    matrix.h
     PARENT_SCOPE
 )
 
@@ -13,3 +14,14 @@ set(support_HEADERS
 set(support_SOURCES
     PARENT_SCOPE
 )
+
+# Unit tests
+
+if (ENABLE_UNIT_TESTS) 
+
+  cinch_add_unit(test_matfuncs
+    SOURCES test/test_matfuncs.cc
+    POLICY MPI
+    THREADS 1)
+
+endif(ENABLE_UNIT_TESTS)
