--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -24,3 +24,12 @@ set_target_properties(portageapp PROPERTIES
 include_directories(${Jali_INCLUDE_DIRS} ${Jali_TPL_INCLUDE_DIRS})
 target_link_libraries(portageapp ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
 
+
+
+# Shotshell example
+add_executable(shotshellapp shotshell.cc)
+target_link_libraries(shotshellapp portage ${EXTRA_LIBS})
+target_link_libraries(shotshellapp ${MPI_CXX_LIBRARIES})
+set_target_properties(shotshellapp PROPERTIES
+                      LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
+target_link_libraries(shotshellapp ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES})
