--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -7,6 +7,7 @@
 set(search_HEADERS
     search_simple.h
     search_kdtree.h
+    search_kdtree3.h
     kdtree.h
     BoundBox.h
     Point.h
@@ -29,6 +30,11 @@ if(ENABLE_UNIT_TESTS)
     THREADS 1)
   cinch_add_unit(search_kdtree_test
     SOURCES search_kdtree_test.cc
+    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
+    THREADS 1)
+  cinch_add_unit(search_kdtree3_test
+    SOURCES search_kdtree3_test.cc
     LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     THREADS 1)
