Build r3d.c as well

--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -7,12 +7,14 @@
 set(intersect_HEADERS
     clipper.hpp
     intersectClipper.h
+    r3d.h
     PARENT_SCOPE
 )
 
 # Add source files
 set(intersect_SOURCES
     clipper.cpp
+    r3d.c
     PARENT_SCOPE
 )
 
@@ -25,7 +27,7 @@ if(ENABLE_UNIT_TESTS)
     )
 
   cinch_add_unit(intersect_r3d
-    SOURCES intersect_r3d_test.cc clipper.cpp
+    SOURCES intersect_r3d_test.cc clipper.cpp r3d.c
     LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     )
