renamed classes, variables so that remap is now interpolate or interpolation and composer is now remapper

--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -4,18 +4,12 @@
 #-----------------------------------------------------------------------------~#
 
 # Add header files
-set(remap_HEADERS
-    remap_1st_order.h
-    remap_2nd_order.h
+set(interpolate_HEADERS
+    interpolate_1st_order.h
+    interpolate_2nd_order.h
     gradient.h
     PARENT_SCOPE
 )
-
-# Add source files
-#set(remap_SOURCES
-#    remap_1st_order.cc
-#    PARENT_SCOPE
-#)
 
 # Unit tests
 
@@ -27,14 +21,14 @@ if (ENABLE_UNIT_TESTS)
     POLICY MPI
     THREADS 1)
 
-  cinch_add_unit(test_remap_1st_order
-    SOURCES  test/test_remap_1st_order.cc
+  cinch_add_unit(test_interpolate_1st_order
+    SOURCES  test/test_interp_1st_order.cc
     LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     THREADS 1)
 
-  cinch_add_unit(test_remap_2nd_order
-    SOURCES test/test_remap_2nd_order.cc
+  cinch_add_unit(test_interpolate_2nd_order
+    SOURCES test/test_interp_2nd_order.cc
     LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     THREADS 1)
