Combine SearchKDTree[23] into a single class

--- a/src/search/CMakeLists.txt
+++ b/src/search/CMakeLists.txt
@@ -6,8 +6,7 @@
 # Add header files
 set(search_HEADERS
     search_simple.h
-    search_kdtree2.h
-    search_kdtree3.h
+    search_kdtree.h
     kdtree.h
     BoundBox.h
     PARENT_SCOPE
