--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -13,3 +13,15 @@ set(driver_HEADERS
 set(driver_SOURCES
     PARENT_SCOPE
 )
+
+# Unit tests
+
+if (ENABLE_UNIT_TESTS)
+
+  cinch_add_unit(test_driver_multivar
+    SOURCES test/test_driver_multivar.cc
+    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
+    THREADS 1)
+
+endif (ENABLE_UNIT_TESTS)
