--- a/src/intersect/CMakeLists.txt
+++ b/src/intersect/CMakeLists.txt
@@ -7,6 +7,8 @@
 set(intersect_HEADERS
     clipper.hpp
     intersectClipper.h
+    r2d.h
+    intersect_r2d.h
     r3d.h
     intersect_r3d.h
     PARENT_SCOPE
@@ -15,6 +17,7 @@ set(intersect_HEADERS
 # Add source files
 set(intersect_SOURCES
     clipper.cpp
+    r2d.c
     r3d.c
     PARENT_SCOPE
 )
@@ -23,6 +26,12 @@ set(intersect_SOURCES
 if(ENABLE_UNIT_TESTS)
   cinch_add_unit(intersectClipper
     SOURCES intersectClipperTest.cc clipper.cpp
+    LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+    POLICY MPI
+    )
+
+  cinch_add_unit(intersect_r2d
+    SOURCES intersect_r2d_test.cc clipper.cpp r2d.c
     LIBRARIES ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
     POLICY MPI
     )
