--- a/src/interpolate/CMakeLists.txt
+++ b/src/interpolate/CMakeLists.txt
@@ -15,23 +15,25 @@ set(interpolate_HEADERS
 
 if (ENABLE_UNIT_TESTS)
 
-  cinch_add_unit(test_gradient
-    SOURCES  test/test_gradient.cc
-    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-    POLICY MPI
-    THREADS 1)
+  if (Jali_DIR)
+    cinch_add_unit(test_gradient
+      SOURCES  test/test_gradient.cc
+      LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+      POLICY MPI
+      THREADS 1)
 
-  cinch_add_unit(test_interpolate_1st_order
-    SOURCES  test/test_interp_1st_order.cc
-    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-    POLICY MPI
-    THREADS 1)
+    cinch_add_unit(test_interpolate_1st_order
+      SOURCES  test/test_interp_1st_order.cc
+      LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+      POLICY MPI
+      THREADS 1)
 
-  cinch_add_unit(test_interpolate_2nd_order
-    SOURCES test/test_interp_2nd_order.cc
-    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-    POLICY MPI
-    THREADS 1)
+    cinch_add_unit(test_interpolate_2nd_order
+      SOURCES test/test_interp_2nd_order.cc
+      LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+      POLICY MPI
+      THREADS 1)
+  endif (Jali_DIR)
 
 endif(ENABLE_UNIT_TESTS)
 
