--- a/src/wrappers/CMakeLists.txt
+++ b/src/wrappers/CMakeLists.txt
@@ -11,27 +11,28 @@ set(wrappers_HEADERS
     PARENT_SCOPE)
 
 if (ENABLE_UNIT_TESTS)
-  cinch_add_unit(test_jali_mesh_wrapper
-                 SOURCES mesh/jali/test/test_jali_mesh_wrapper.cc
-                 LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-                 # this is relative to the wrapper directory
-                 INPUTS ../../test_data/shotshell.exo
-                 ../../test_data/shotshell-v.exo
-                 POLICY MPI
-                 THREADS 1)
+   if (Jali_DIR)
+     cinch_add_unit(test_jali_mesh_wrapper
+                    SOURCES mesh/jali/test/test_jali_mesh_wrapper.cc
+                    LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+                    # this is relative to the wrapper directory
+                    INPUTS ../../test_data/shotshell.exo
+                    ../../test_data/shotshell-v.exo
+                    POLICY MPI
+                    THREADS 1)
 
-  cinch_add_unit(test_jali_state_wrapper
-                 SOURCES state/jali/test/test_jali_state_wrapper.cc
-                 LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-                 POLICY MPI
-                 THREADS 1)
+      cinch_add_unit(test_jali_state_wrapper
+                     SOURCES state/jali/test/test_jali_state_wrapper.cc
+                     LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+                     POLICY MPI
+                     THREADS 1)
+   endif (Jali_DIR)
 
-  if(FLECSI_INSTALL_DIR)
-    cinch_add_unit(test_flecsi_mesh_wrapper
-                   SOURCES mesh/flecsi/test/test_flecsi_mesh_wrapper.cc
-                   LIBRARIES portage ${FLECSI_LIBRARIES})
-  endif(FLECSI_INSTALL_DIR)
-
+   if (FLECSI_INSTALL_DIR)
+      cinch_add_unit(test_flecsi_mesh_wrapper
+                     SOURCES mesh/flecsi/test/test_flecsi_mesh_wrapper.cc
+                     LIBRARIES portage ${FLECSI_LIBRARIES})
+   endif (FLECSI_INSTALL_DIR)
 
 endif(ENABLE_UNIT_TESTS)
 
