fixed some organizational errors in the cmake commands

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -55,6 +55,9 @@ if (FLECSI_INSTALL_DIR)
       set_target_properties(portage_flecsiapp PROPERTIES
                             LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
   endif (ENABLE_MPI)
+endif (FLECSI_INSTALL_DIR)
+
+if (JALI_DIR AND FLECSI_INSTALL_DIR)
   add_executable(portage_jali2flecsiapp main_jali_to_flecsi.cc)
   target_link_libraries(portage_jali2flecsiapp portage ${EXTRA_LIBS})
   include_directories(${FLECSI_INCLUDE_DIRS})
@@ -68,7 +71,7 @@ if (FLECSI_INSTALL_DIR)
   target_link_libraries(portage_jali2flecsiapp ${Jali_LIBRARIES}
                         ${Jali_TPL_LIBRARIES})
 
-endif (FLECSI_INSTALL_DIR)
+endif (JALI_DIR AND FLECSI_INSTALL_DIR)
 
 
 
@@ -80,10 +83,14 @@ if(ENABLE_TCMALLOC)
   if (Jali_DIR)
     target_link_libraries(portageapp ${TCMALLOC_LIB})
     target_link_libraries(timingapp ${TCMALLOC_LIB})
+    target_link_libraries(shotshellapp ${TCMALLOC_LIB})
   endif (Jali_DIR)
   if (FLECSI_INSTALL_DIR)
-    target_link_libraries(shotshellapp ${TCMALLOC_LIB})
+    target_link_libraries(portage_flecsiapp ${TCMALLOC_LIB})
   endif (FLECSI_INSTALL_DIR)
+  if (JALI_DIR AND FLECSI_INSTALL_DIR)
+    target_link_libraries(portage_jali2flecsiapp ${TCMALLOC_LIB})
+  endif (JALI_DIR AND FLECSI_INSTALL_DIR)
 endif(ENABLE_TCMALLOC)
 
 # Profiling option (to allow pausing and resuming profiling during execution)
@@ -96,8 +103,13 @@ if(ENABLE_PROFILE)
 
   if (Jali_DIR)
     target_link_libraries(portageapp ${VTUNE_LIB})
+    target_link_libraries(timingapp ${VTUNE_LIB})
+    target_link_libraries(shotshellapp ${VTUNE_LIB})
   endif (Jali_DIR)
   if (FLECSI_INSTALL_DIR)
-    target_link_libraries(shotshellapp ${VTUNE_LIB})
+    target_link_libraries(portage_flecsiapp ${VTUNE_LIB})
   endif (FLECSI_INSTALL_DIR)
+  if (JALI_DIR AND FLECSI_INSTALL_DIR)
+    target_link_libraries(portage_jali2flecsiapp ${VTUNE_LIB})
+  endif (JALI_DIR AND FLECSI_INSTALL_DIR)
 endif(ENABLE_PROFILE)
