replace matrix.h with Matrix.h

--- a/src/support/CMakeLists.txt
+++ b/src/support/CMakeLists.txt
@@ -6,9 +6,9 @@
 # Add header files
 set(support_HEADERS
     portage.h
-    matrix.h
-    Point.h
     Vector.h
+    Point.h
+    Matrix.h
     PARENT_SCOPE
 )
 
