Added AuxMeshTopology.h to list of headers

--- a/src/wrappers/CMakeLists.txt
+++ b/src/wrappers/CMakeLists.txt
@@ -20,6 +20,7 @@ endif (FLECSI_INSTALL_DIR)
 set(wrapper_HEADERS
     ${jali_wrapper_headers}
     ${flecsi_wrapper_headers}
+    AuxMeshTopology.h
     PARENT_SCOPE)
 
 if (ENABLE_UNIT_TESTS)
