Compare the field in the test to gold results

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -74,6 +74,9 @@ if (JALI_DIR AND FLECSI_INSTALL_DIR)
 endif (JALI_DIR AND FLECSI_INSTALL_DIR)
 
 
+# Comparator for testing infrastructure
+add_executable(apptest_cmp apptest_cmp.cc)
+
 
 #TCMalloc option
 set(ENABLE_TCMALLOC TRUE CACHE BOOL "Use TCMalloc")
