--- a/test/portageapp2/CMakeLists.txt
+++ b/test/portageapp2/CMakeLists.txt
@@ -1,4 +1,5 @@
 file(COPY portageapp_test2.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY field_gold.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 add_test(NAME portageapp_test2
          COMMAND ./portageapp_test2.sh)
