--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 message(STATUS "Adding test directory")
 
+add_subdirectory(apptest_cmp)
 add_subdirectory(portageapp)
 add_subdirectory(portageapp2)
-
