Add a portageapp_test3 test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,4 @@ message(STATUS "Adding test directory")
 add_subdirectory(apptest_cmp)
 add_subdirectory(portageapp)
 add_subdirectory(portageapp2)
+add_subdirectory(portageapp3)
