--- a/test/portageapp2/CMakeLists.txt
+++ b/test/portageapp2/CMakeLists.txt
@@ -5,5 +5,5 @@ add_test(NAME portageapp_test2
          COMMAND ./portageapp_test2.sh)
 set_property(TEST portageapp_test2
          PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-
-
+set_property(TEST portageapp_test2
+         PROPERTY PROCESSORS 4)
