start work on state - this is currently broken

--- a/src/simple_mesh/CMakeLists.txt
+++ b/src/simple_mesh/CMakeLists.txt
@@ -6,6 +6,7 @@
 # Add header files
 set (simple_mesh_HEADERS
   simple_mesh.h
+  simple_state.h
   PARENT_SCOPE
   )
 
@@ -20,6 +21,12 @@ if (ENABLE_UNIT_TESTS)
 
   cinch_add_unit(test_simple_mesh
     SOURCES test/test_simple_mesh.cc
+    POLICY MPI
+    THREADS 1
+    )
+
+  cinch_add_unit(test_simple_state
+    SOURCES test/test_simple_state.cc
     POLICY MPI
     THREADS 1
     )
