Use a macro to generate tests

--- a/test/portageapp/CMakeLists.txt
+++ b/test/portageapp/CMakeLists.txt
@@ -13,32 +13,17 @@ set_property(TEST portageapp_test
 set_property(TEST portageapp_test
          PROPERTY PROCESSORS 1)
 
+macro(ADD_PORTAGE_TEST TEST_NUM NUM_PROC)
+  file(COPY portageapp_test${TEST_NUM}.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  file(COPY field_gold${TEST_NUM}.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  add_test(NAME portageapp_test${TEST_NUM}
+    COMMAND ./portageapp_test${TEST_NUM}.sh)
+  set_property(TEST portageapp_test${TEST_NUM}
+    PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
+  set_property(TEST portageapp_test${TEST_NUM}
+    PROPERTY PROCESSORS ${NUM_PROC})
+endmacro(ADD_PORTAGE_TEST)
 
-file(COPY portageapp_test0.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY field_gold0.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-add_test(NAME portageapp_test0
-         COMMAND ./portageapp_test0.sh)
-set_property(TEST portageapp_test0
-         PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-set_property(TEST portageapp_test0
-         PROPERTY PROCESSORS 4)
-
-
-file(COPY portageapp_test1.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY field_gold1.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-add_test(NAME portageapp_test1
-         COMMAND ./portageapp_test1.sh)
-set_property(TEST portageapp_test1
-         PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-set_property(TEST portageapp_test1
-         PROPERTY PROCESSORS 4)
-
-
-file(COPY portageapp_test13.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY field_gold13.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-add_test(NAME portageapp_test13
-         COMMAND ./portageapp_test13.sh)
-set_property(TEST portageapp_test13
-         PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-set_property(TEST portageapp_test13
-         PROPERTY PROCESSORS 1)
+ADD_PORTAGE_TEST(0 4)
+ADD_PORTAGE_TEST(1 4)
+ADD_PORTAGE_TEST(13 1)
