Add tests for examples 9, 10, 11

--- a/test/portageapp/CMakeLists.txt
+++ b/test/portageapp/CMakeLists.txt
@@ -27,4 +27,7 @@ endmacro(ADD_PORTAGE_TEST)
 ADD_PORTAGE_TEST(0 4)
 ADD_PORTAGE_TEST(1 4)
 ADD_PORTAGE_TEST(8 8)
+ADD_PORTAGE_TEST(9 8)
+ADD_PORTAGE_TEST(10 8)
+ADD_PORTAGE_TEST(11 8)
 ADD_PORTAGE_TEST(13 1)
