Add tests for the shotshell app
The shotshellapp was extended to save the field in parallel, though currently
the app seems to only work in serial. Once it is extended to parallel, the
field saving should just work.

Also the node remap does not seem to work (the field is all zeros).

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,3 +2,4 @@ message(STATUS "Adding test directory")
 
 add_subdirectory(apptest_cmp)
 add_subdirectory(portageapp)
+add_subdirectory(shotshellapp)
