--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,3 +3,4 @@ message(STATUS "Adding test directory")
 add_subdirectory(apptest_cmp)
 add_subdirectory(portageapp)
 add_subdirectory(shotshellapp)
+add_subdirectory(simple_mesh_app)
