--- a/test/simple_mesh_app/CMakeLists.txt
+++ b/test/simple_mesh_app/CMakeLists.txt
@@ -24,3 +24,5 @@ ADD_SIMPLE_MESH_TEST(6)
 ADD_SIMPLE_MESH_TEST(7)
 ADD_SIMPLE_MESH_TEST(8)
 ADD_SIMPLE_MESH_TEST(9)
+ADD_SIMPLE_MESH_TEST(10)
+ADD_SIMPLE_MESH_TEST(11)
