--- a/doc/doxygen.conf.in
+++ b/doc/doxygen.conf.in
@@ -1048,7 +1048,7 @@ HTML_FILE_EXTENSION    = .html
 # of the possible markers and block names see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_HEADER            = @CMAKE_BINARY_DIR@/doc/${${PROJECT_NAME}_DOXYGEN_TARGET}/html/header.html
+HTML_HEADER            = @CMAKE_CURRENT_SOURCE_DIR@/doc/header.html
 
 # The HTML_FOOTER tag can be used to specify a user-defined HTML footer for each
 # generated HTML page. If the tag is left blank doxygen will generate a standard
@@ -1058,7 +1058,7 @@ HTML_HEADER            = @CMAKE_BINARY_DIR@/doc/${${PROJECT_NAME}_DOXYGEN_TARGET
 # that doxygen normally uses.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_FOOTER            = @CMAKE_BINARY_DIR@/doc/${${PROJECT_NAME}_DOXYGEN_TARGET}/html/footer.html
+HTML_FOOTER            = @CMAKE_CURRENT_SOURCE_DIR@/doc/footer.html
 
 # The HTML_STYLESHEET tag can be used to specify a user-defined cascading style
 # sheet that is used by each HTML page. It can be used to fine-tune the look of
@@ -1070,7 +1070,7 @@ HTML_FOOTER            = @CMAKE_BINARY_DIR@/doc/${${PROJECT_NAME}_DOXYGEN_TARGET
 # obsolete.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_STYLESHEET        = @CMAKE_BINARY_DIR@/doc/${${PROJECT_NAME}_DOXYGEN_TARGET}/html/stylesheet.css
+HTML_STYLESHEET        =
 
 # The HTML_EXTRA_STYLESHEET tag can be used to specify additional user-defined
 # cascading style sheets that are included after the standard style sheets
@@ -1083,7 +1083,7 @@ HTML_STYLESHEET        = @CMAKE_BINARY_DIR@/doc/${${PROJECT_NAME}_DOXYGEN_TARGET
 # list). For an example see the documentation.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_EXTRA_STYLESHEET  =
+HTML_EXTRA_STYLESHEET  = @CMAKE_CURRENT_SOURCE_DIR@/doc/customdoxygen.css
 
 # The HTML_EXTRA_FILES tag can be used to specify one or more extra images or
 # other source files which should be copied to the HTML output directory. Note
@@ -1093,7 +1093,7 @@ HTML_EXTRA_STYLESHEET  =
 # files will be copied as-is; there are no commands or markers available.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_EXTRA_FILES       =
+HTML_EXTRA_FILES       = @CMAKE_CURRENT_SOURCE_DIR@/doc/doxy-boot.js
 
 # The HTML_COLORSTYLE_HUE tag controls the color of the HTML output. Doxygen
 # will adjust the colors in the stylesheet and background images according to
