modified options for adding tests

--- a/test/shotshellapp/CMakeLists.txt
+++ b/test/shotshellapp/CMakeLists.txt
@@ -1,17 +1,21 @@
 message(STATUS "Adding shotshellapp test")
 
-macro(ADD_SHOTSHELLAPP_TEST TEST_NUM NUM_PROC)
-  file(COPY shotshellapp_test${TEST_NUM}.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-  file(COPY field_gold${TEST_NUM}.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-  add_test(NAME shotshellapp_test${TEST_NUM}
-    COMMAND ./shotshellapp_test${TEST_NUM}.sh)
-  set_property(TEST shotshellapp_test${TEST_NUM}
+macro(ADD_SHOTSHELLAPP_TEST DIM ENTITY FIELDORDER REMAPORDER)
+  set(SUFFIX "${DIM}d_${ENTITY}_f${FIELDORDER}_r${REMAPORDER}")
+  file(COPY shotshellapp_test_${SUFFIX}.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  file(GLOB GOLDFILES gold/GOLD-field_${SUFFIX}.txt*)
+  file(COPY ${GOLDFILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  add_test(NAME shotshellapp_test_${SUFFIX}
+    COMMAND ./shotshellapp_test_${SUFFIX}.sh)
+  set_property(TEST shotshellapp_test_${SUFFIX}
     PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-  set_property(TEST shotshellapp_test${TEST_NUM}
-    PROPERTY PROCESSORS ${NUM_PROC})
 endmacro(ADD_SHOTSHELLAPP_TEST)
 
-ADD_SHOTSHELLAPP_TEST(0 1)
-ADD_SHOTSHELLAPP_TEST(1 1)
-ADD_SHOTSHELLAPP_TEST(2 1)
-ADD_SHOTSHELLAPP_TEST(3 1)
+ADD_SHOTSHELLAPP_TEST(2 cell 0 1)
+ADD_SHOTSHELLAPP_TEST(2 cell 1 1)
+ADD_SHOTSHELLAPP_TEST(2 cell 1 2)
+ADD_SHOTSHELLAPP_TEST(2 cell 2 2)
+ADD_SHOTSHELLAPP_TEST(2 node 0 1)
+ADD_SHOTSHELLAPP_TEST(2 node 1 1)
+ADD_SHOTSHELLAPP_TEST(2 node 1 2)
+ADD_SHOTSHELLAPP_TEST(2 node 2 2)
