--- a/test/portageapp/CMakeLists.txt
+++ b/test/portageapp/CMakeLists.txt
@@ -6,28 +6,33 @@ message(STATUS "Adding portageapp test")
 
 file(COPY runme.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-add_test(NAME portageapp_test
-         COMMAND ./runme.sh)
-set_property(TEST portageapp_test
-         PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-set_property(TEST portageapp_test
-         PROPERTY PROCESSORS 1)
+macro(ADD_PORTAGEAPP_TEST DIM ENTITY FIELDORDER REMAPORDER)
+  set(SUFFIX "${DIM}d_${ENTITY}_f${FIELDORDER}_r${REMAPORDER}")
 
-macro(ADD_PORTAGE_TEST TEST_NUM NUM_PROC)
-  file(COPY portageapp_test${TEST_NUM}.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-  file(COPY field_gold${TEST_NUM}.txt DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-  add_test(NAME portageapp_test${TEST_NUM}
-    COMMAND ./portageapp_test${TEST_NUM}.sh)
-  set_property(TEST portageapp_test${TEST_NUM}
+  file(COPY portageapp_${SUFFIX}.sh DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  file(GLOB GOLDFILES gold/GOLD-field_${SUFFIX}*.txt*)
+  file(COPY ${GOLDFILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+  add_test(NAME portageapp_${SUFFIX} COMMAND ./portageapp_${SUFFIX}.sh)
+  set_property(TEST portageapp_${SUFFIX}
     PROPERTY ENVIRONMENT APPDIR=${CMAKE_BINARY_DIR}/bin)
-  set_property(TEST portageapp_test${TEST_NUM}
-    PROPERTY PROCESSORS ${NUM_PROC})
-endmacro(ADD_PORTAGE_TEST)
+endmacro(ADD_PORTAGEAPP_TEST)
 
-ADD_PORTAGE_TEST(0 4)
-ADD_PORTAGE_TEST(1 4)
-ADD_PORTAGE_TEST(8 8)
-ADD_PORTAGE_TEST(9 8)
-ADD_PORTAGE_TEST(10 8)
-ADD_PORTAGE_TEST(11 8)
-ADD_PORTAGE_TEST(13 1)
+
+
+
+ADD_PORTAGEAPP_TEST(2 cell 0 1)
+ADD_PORTAGEAPP_TEST(2 cell 1 1)
+ADD_PORTAGEAPP_TEST(2 cell 1 2)
+ADD_PORTAGEAPP_TEST(2 cell 2 2)
+ADD_PORTAGEAPP_TEST(2 node 0 1)
+ADD_PORTAGEAPP_TEST(2 node 1 1)
+ADD_PORTAGEAPP_TEST(2 node 1 2)
+ADD_PORTAGEAPP_TEST(2 node 2 2)
+ADD_PORTAGEAPP_TEST(3 cell 0 1)
+ADD_PORTAGEAPP_TEST(3 cell 1 1)
+ADD_PORTAGEAPP_TEST(3 cell 1 2)
+ADD_PORTAGEAPP_TEST(3 cell 2 2)
+ADD_PORTAGEAPP_TEST(3 node 0 1)
+ADD_PORTAGEAPP_TEST(3 node 1 1)
+ADD_PORTAGEAPP_TEST(3 node 1 2)
+ADD_PORTAGEAPP_TEST(3 node 2 2)
