Fix builds and tests to work properly without Jali

--- a/src/distributed/CMakeLists.txt
+++ b/src/distributed/CMakeLists.txt
@@ -8,10 +8,12 @@ set(distributed_HEADERS
     PARENT_SCOPE)
 
 if (ENABLE_UNIT_TESTS)
-  cinch_add_unit(test_mpi_bounding_boxes
-                 SOURCES test/test_mpi_bounding_boxes.cc
-                 LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
-                 POLICY MPI
-                 THREADS 4)
+  if (Jali_DIR)
+    cinch_add_unit(test_mpi_bounding_boxes
+                   SOURCES test/test_mpi_bounding_boxes.cc
+                   LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+                   POLICY MPI
+                   THREADS 4)
+  endif (Jali_DIR)
 endif(ENABLE_UNIT_TESTS)
 
