Addresses issue LNK-186. Creates a new driver test that remaps step function data.

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -70,6 +70,11 @@ if (ENABLE_UNIT_TESTS)
        LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
        POLICY MPI
        THREADS 1)
+       cinch_add_unit(test_driver_step
+       SOURCES test/test_driver_step 
+       LIBRARIES portage ${Jali_LIBRARIES} ${Jali_TPL_LIBRARIES}
+       POLICY MPI
+       THREADS 1)
 
    endif (Jali_DIR)
 
