--- a/app/simple_mesh_app/CMakeLists.txt
+++ b/app/simple_mesh_app/CMakeLists.txt
@@ -49,6 +49,11 @@ POSSIBILITY OF SUCH DAMAGE.
 add_executable(simple_mesh_app simple_mesh_app.cc)
 target_link_libraries(simple_mesh_app portage ${EXTRA_LIBS})
 
+if (ENABLE_MPI)
+  target_link_libraries(simple_mesh_app ${MPI_CXX_LIBRARIES})
+  set_target_properties(simple_mesh_app PROPERTIES
+                        LINK_FLAGS "${MPI_CXX_LINK_FLAGS}")
+endif (ENABLE_MPI)
 
 #TCMalloc option
 set(ENABLE_TCMALLOC TRUE CACHE BOOL "Use TCMalloc")
