.travis.yml: make mpi=OFF test

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,14 @@ sudo: required
 services:
 - docker
 
+env:
+  matrix:
+    - MPI=OFF
+    - MPI=ON
+
 script:
   - cp -vr docker ${HOME}/docker
   - cd ../../
   - mv -v ${TRAVIS_REPO_SLUG} $HOME/docker
-  - docker build -t ${TRAVIS_REPO_SLUG}:latest ${HOME}/docker/
+  - docker build --build-arg MPI=${MPI}
+                 -t ${TRAVIS_REPO_SLUG}:latest ${HOME}/docker/
