--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,15 @@ env:
   matrix:
     - MPI=OFF
     - MPI=ON
+    - MPI=ON COVERAGE=ON
 
 script:
   - cp -vr docker ${HOME}/docker
   - cd ../../
   - mv -v ${TRAVIS_REPO_SLUG} $HOME/docker
   - docker build --build-arg MPI=${MPI}
+                 --build-arg TRAVIS_BRANCH=${TRAVIS_BRANCH} --build-arg TRAVIS_JOB_NUMBER=${TRAVIS_JOB_NUMBER}
+                 --build-arg TRAVIS_PULL_REQUEST=${TRAVIS_PULL_REQUEST} --build-arg TRAVIS_JOB_ID=${TRAVIS_JOB_ID}
+                 --build-arg TRAVIS_TAG=${TRAVIS_TAG} --build-arg TRAVIS_REPO_SLUG=${TRAVIS_REPO_SLUG}
+                 --build-arg TRAVIS_COMMIT=${TRAVIS_COMMIT} --build-arg COVERAGE=${COVERAGE}
                  -t ${TRAVIS_REPO_SLUG}:latest ${HOME}/docker/
